classDiagram
    class UserInputs
    class ConsoleColors
    class GeneralPrints
    class CommandType

    UserInputs --> Player
    UserInputs --> Hero
    UserInputs --> Monster
    UserInputs --> Inventory
    UserInputs --> Spell
    UserInputs --> Weapon

    GeneralPrints --> Player
    GeneralPrints --> Hero
    GeneralPrints --> Monster